--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -1,15 +1,17 @@
 // Blue Grey
-$color-primary: #37474f;
+$color-primary: #0288D1;
 $color-primary-light: #eceff1;
 $color-primary-dark: #263238;
 // Blue
 $color-blue-light: #448aff;
+$color-blue-light-2: #DFEAF0;
 $color-blue-medium: #00b0ff;
-$color-blue-dark: #4867AA;
+$color-blue-dark: #074684;
 // Grey
 $color-grey-light: #fafafa;
 $color-grey-light-1: #e6e6e6;
 $color-grey-light-2: #bdbdbd;
+$color-grey-light-3: #576574;
 $color-grey-medium: #9e9e9e;
 $color-grey-medium-2: #818078;
 $color-grey-dark: #212121;
