--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,7 @@
 @import "layouts/navigation";
 
 @import "pages/about";
-@import "pages/articles";
+@import "pages/posts";
 @import "pages/contact";
 @import "pages/home";
 @import "pages/patreon";
