--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import "layouts/navigation";
 
 @import "pages/about";
+@import "pages/post";
 @import "pages/posts";
 @import "pages/contact";
 @import "pages/home";
