--- a/public/css/app.css
+++ b/public/css/app.css
@@ -441,6 +441,36 @@ body {
   background-color: #fff;
 }
 
+.related-post-wrapper {
+  margin-top: 40px;
+}
+
+.tag-and-share {
+  margin-top: 15px;
+}
+
+.recent-post h5 {
+  font-size: 24px;
+  position: relative;
+  margin-bottom: -10px;
+  padding-bottom: 12px;
+}
+
+.recent-post h5::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 40px;
+  background: #212121;
+}
+
+.section-articles {
+  background-color: #fff;
+}
+
+/* Blog */
 .blog-wrapper:last-child {
   margin-bottom: 5rem;
 }
@@ -522,9 +552,9 @@ blockquote footer {
 
 .blog-post-tag span {
   font-size: 18px;
-  color: #333333;
+  color: #424242;
   font-weight: 700;
-  font-family: "Nunito", sans-serif;
+  font-family: inherit;
 }
 
 .blog-post-tag ul {
@@ -536,7 +566,8 @@ blockquote footer {
 }
 
 .blog-post-tag ul li a {
-  color: #666;
+  color: #576574;
+  font-size: 15px;
 }
 
 .blog-share {
@@ -545,9 +576,9 @@ blockquote footer {
 
 .blog-share span {
   font-size: 18px;
-  color: #333333;
+  color: #424242;
   font-weight: 700;
-  font-family: "Nunito", sans-serif;
+  font-family: inherit;
 }
 
 .blog-share ul {
@@ -559,7 +590,8 @@ blockquote footer {
 }
 
 .blog-share ul li a {
-  color: #666;
+  color: #576574;
+  font-size: 15px;
 }
 
 .comment-box {
@@ -584,13 +616,13 @@ blockquote footer {
 .avatar-name h4 {
   font-size: 18px;
   font-weight: 700;
-  color: #333333;
+  color: #424242;
   margin-bottom: 5px;
 }
 
 .avatar-name span {
   font-size: 14px;
-  color: #666666;
+  color: #818078;
 }
 
 .comment-text p {
@@ -600,8 +632,8 @@ blockquote footer {
 
 .comment-text a {
   font-weight: 700;
-  color: #333333;
-  font-family: "Nunito", sans-serif;
+  color: #424242;
+  font-family: inherit;
 }
 
 .post-comment-form input {
@@ -659,6 +691,256 @@ blockquote footer {
   white-space: nowrap;
   width: 100%;
   margin-bottom: 30px;
+}
+
+/* breadcrumb-area */
+.breadcrumb {
+  margin-top: 12px;
+  display: block;
+  background: none;
+  border: none;
+  text-align: left;
+}
+
+.breadcrumb-item {
+  display: inline-block;
+}
+
+.breadcrumb-item a {
+  font-size: 20px;
+  color: #074684;
+  text-decoration: none;
+}
+
+.breadcrumb-item a:hover {
+  color: #576574;
+}
+
+.breadcrumb > .active {
+  color: #576574;
+  font-size: 20px;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  display: inline-block;
+  padding-right: 20px;
+  padding-left: 20px;
+  color: #074684;
+  content: "\F0A4";
+  font-family: inherit;
+}
+
+/* Pagination */
+.pagination {
+  display: block;
+  border-radius: 0;
+  margin-top: 5rem;
+}
+
+.pagination ul li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.pagination ul li a {
+  font-size: 18px;
+  color: #818078;
+  text-transform: uppercase;
+  font-weight: 600;
+  position: relative;
+  font-family: inherit;
+  padding: 0 5px;
+}
+
+.pagination ul li a.active {
+  color: #448aff;
+}
+
+.pagination ul li a:hover {
+  color: #448aff;
+}
+
+.pagination ul li a.active::before {
+  content: "";
+  top: -7px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  right: 0;
+  margin: auto;
+}
+
+.pagination ul li a.active::after {
+  content: "";
+  bottom: -7px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #448aff;
+  position: absolute;
+  right: 0;
+  margin: auto;
+}
+
+/* blog-widget */
+.widget {
+  margin-top: 48px;
+}
+
+.sidebar-form {
+  position: relative;
+}
+
+.sidebar-form input {
+  width: 100%;
+  border: 1px solid #e6e6e6;
+  border-radius: 10px;
+  padding: 14px 30px;
+}
+
+.sidebar-form button {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: none;
+  border: none;
+  font-size: 14px;
+  color: #818078;
+  cursor: pointer;
+}
+
+.widget-title h5 {
+  font-size: 24px;
+  font-weight: 700;
+  position: relative;
+  margin-bottom: 30px;
+  padding-bottom: 12px;
+}
+
+.widget-title h5::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 40px;
+  background: #212121;
+}
+
+.rc-post-thumb img {
+  width: 100%;
+}
+
+.rc-post-thumb {
+  margin-bottom: 25px;
+}
+
+.rc-post-content h5 a {
+  text-decoration: none;
+  color: #0288D1;
+  font-size: 20px;
+}
+
+.rc-post-content h5:hover a {
+  color: #00b0ff;
+}
+
+.post-meta ul li {
+  display: inline-block;
+  color: #818078;
+  margin-right: 15px;
+  font-size: 1.4rem;
+  margin-top: 1.2rem;
+}
+
+.widget-link ul li {
+  margin-bottom: 8px;
+  font-size: 15px;
+  list-style: none;
+}
+
+.widget-link ul li:hover a {
+  color: #448aff;
+}
+
+.widget-link ul li:last-child {
+  margin-bottom: 0px;
+}
+
+.widget-link li a {
+  color: #424242;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.widget-link li a span {
+  float: right;
+  display: block;
+}
+
+.widget-tag {
+  overflow: hidden;
+}
+
+.widget-tag li {
+  float: left;
+  margin-bottom: 10px;
+  margin-right: 9px;
+  list-style: none;
+}
+
+.widget-tag li a {
+  background: #ebf5ff;
+  color: #818078;
+  border-radius: 10px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  line-height: 1;
+  padding: 10px 15px;
+  text-transform: uppercase;
+}
+
+.widget-tag li:hover a {
+  background: #0288D1;
+  color: #fff;
+}
+
+.widget-banner {
+  position: relative;
+}
+
+.banner-thumb img {
+  width: 100%;
+}
+
+.banner-content {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  padding: 0 50px;
+  text-align: center;
+}
+
+.banner-content h3 {
+  color: #fff;
+  font-size: 40px;
+  font-weight: 800;
+  margin-bottom: 30px;
+}
+
+.banner-content .btn {
+  border-radius: 0;
+}
+
+.banner-content .btn:hover {
+  border-color: #fff;
+  color: #fff;
 }
 
 .section-contact {
@@ -878,7 +1160,6 @@ textarea.input-field {
   background-color: #fafafa;
 }
 
-/* Overall section style ends here */
 /* First quote Style starts here */
 .quote__row {
   padding: 120px;
@@ -887,7 +1168,6 @@ textarea.input-field {
   font-weight: 100;
 }
 
-/* First quote Style ends here */
 /* subscription style starts here */
 .subcription {
   background-color: #fff;
@@ -943,7 +1223,6 @@ textarea.input-field {
           transform: translateY(2px);
 }
 
-/* subscription style ends here */
 /*  About Styles hr in about otim starts here */
 .about__divider {
   overflow: visible;
@@ -967,7 +1246,6 @@ textarea.input-field {
   background: white;
 }
 
-/*  About Styles hr in about otim ends here */
 /* Second quote Style starts here */
 .quote__divider {
   border: 0;
@@ -978,13 +1256,11 @@ textarea.input-field {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-/* Second quote Style ends here */
 /* About image Style starts here */
 .otim-circle {
   border-radius: 60%;
 }
 
-/* About image ends here */
 /* About social Style ends here */
 .about__social {
   display: inline-flex;
@@ -1003,7 +1279,6 @@ textarea.input-field {
   text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
 }
 
-/* About social Style ends here */
 /* Second quote Style starts here */
 .quote__img {
   background-image: url(../img/book.jpg);
@@ -1012,7 +1287,6 @@ textarea.input-field {
   background-repeat: no-repeat, repeat-y;
 }
 
-/* Second quote Style ends here */
 .section-patreon {
   background-color: #1a237e;
 }
