--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import "layouts/footer";
 @import "layouts/grid";
 @import "layouts/header";
+@import "layouts/loading";
 @import "layouts/navigation";
 
 @import "pages/about";
