--- a/resources/sass/layouts/_navigation.scss
+++ b/resources/sass/layouts/_navigation.scss
@@ -42,8 +42,33 @@
         font-weight: bold;
         flex-grow: 2;
     }
+}
 
-    &__item {
+@include respond(phone) {
+    .navigation {
+        display: grid;
+        grid-row: 1;
 
+        &__list {
+            font-size: 1.5rem;
+            padding: 0 30px 0;
+        }
+        &__logo {
+            font-size: 1.5rem;
+        }
+    }
+}
+@include respond(tab-port) {
+    .navigation {
+        display: grid;
+        grid-row: 1;
+
+        &__list {
+            font-size: 2rem;
+            padding: 0 10px 0;
+        }
+        &__logo {
+            font-size: 2rem;
+        }
     }
 }
